--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,11 @@ coverage.txt
 
 .vagrant/
 
+# .check* files are needed so .PHONY dependencies in makefile
+# aren't built each time you try to make the target (only if
+# the target dependencies, like source files, changed)
+.check*
+
+# needed for the makefile btfhub building logic
 *.md5
 
