Makefile.one: default parallel jobs for libbpf build only
This was causing issues such as:

    make[1]: warning: -j24 forced in makefile: resetting jobserver mode.

So its better to use $(PARALLEL) whenever we would like builds to be
parallel by default (or to rely in user providing -jX to make as an
argument).

--- a/Makefile.one
+++ b/Makefile.one
@@ -8,11 +8,10 @@ all:
 
 PARALLEL = $(shell $(CMD_GREP) -c ^processor /proc/cpuinfo)
 
-NORM_MAKE = make -j$(PARALLEL)
+NORM_MAKE = make
 
 MAKE = make -f Makefile.one
 MAKEFLAGS += --no-print-directory
-MAKEFLAGS += -j$(PARALLEL)
 
 # tools
 
@@ -245,7 +244,8 @@ $(OUTPUT_DIR)/libbpf/libbpf.a: $(LIBBPF_SRC) $(wildcard $(LIBBPF_SRC)/*.[ch]) | 
 	CC="$(CMD_CLANG)" \
 		CFLAGS="$(LIBBPF_CFLAGS)" \
 		LD_FLAGS="$(LIBBPF_LDFLAGS)" \
-		$(NORM_MAKE) -C $(LIBBPF_SRC) \
+		$(NORM_MAKE) -j$(PARALLEL) \
+		-C $(LIBBPF_SRC) \
 		BUILD_STATIC_ONLY=1 \
 		DESTDIR=$(abspath ./$(OUTPUT_DIR)/libbpf/) \
 		OBJDIR=$(abspath ./$(OUTPUT_DIR)/libbpf/obj) \
