tracee-ebpf: remove run-time non CO-RE eBPF obj build logic
From now on, it is the user responsibility to have the non CO-RE eBPF
object correctly placed in "/tmp/tracee" directory. Tracee will load
it, instead of CO-RE eBPF object, as a last resource if there is no:

    1. BTF file pointed by TRACEE_BTF_FILE environment variable
    2. Embedded BTF available in running kernel (/sys/kernel/btf/vmlinux)
    3. BTF file embedded into "tracee-ebpf" binary (from BTFhub)

User might use "make" to install the non CO-RE object:

    $ make -f Makefile.one install-bpf-nocore

And observe BPF object from /tmp/tracee being used, if needed, just like:

    $ sudo ./dist/tracee-ebpf --debug --trace 'event!=sched*'

    OSInfo: ARCH: x86_64
    OSInfo: VERSION: "20.04.3 LTS (Focal Fossa)"
    OSInfo: ID: ubuntu
    OSInfo: ID_LIKE: debian
    OSInfo: PRETTY_NAME: "Ubuntu 20.04.3 LTS"
    OSInfo: VERSION_ID: "20.04"
    OSInfo: VERSION_CODENAME: focal
    OSInfo: KERNEL_RELEASE: 5.8.0-63-generic
    BTF: bpfenv = false, btfenv = false, vmlinux = false
    BPF: no BTF file was found or provided, trying non CO-RE eBPF at
         /tmp/tracee/tracee.bpf.5_8_0-63-generic.v0_6_5-20-g3353501.o

If you're willing to generate the non CO-RE eBPF object using the
tracee-make container, you're able to by doing:

    $ make -f builder/Makefile.docker alpine-prepare # use ubuntu also
    $ make -f builder/Makefile.docker alpine-shell   # use ubuntu also

and then, inside the docker container:

    tracee@f65bab137305[/tracee]$ make -f Makefile.one clean
    tracee@f65bab137305[/tracee]$ make -f Makefile.one tracee-ebpf
    tracee@f65bab137305[/tracee]$ make -f Makefile.one install-bpf-nocore

    tracee@f65bab137305[/tracee]$ sudo ./dist/tracee-ebpf --debug --trace 'event!=sched*'

    KConfig: warning: could not check enabled kconfig features
    (could not read /boot/config-5.8.0-63-generic: ...)
    KConfig: warning: assuming kconfig values, might have unexpected behavior
    OSInfo: KERN

--- a/Makefile.one
+++ b/Makefile.one
@@ -213,6 +213,11 @@ help:
 	@echo "$ make tracee-rules         # build ./dist/tracee-rules"
 	@echo "$ make rules                # build ./dist/rules"
 	@echo ""
+	@echo "# install"
+	@echo ""
+	@echo "$ make install-bpf-nocore   # install BPF no CO-RE obj into /tmp/tracee"
+	@echo "$ make uninstall-bpf-nocore # uninstall BPF no CO-RE obj from /tmp/tracee"
+	@echo ""
 	@echo "# clean"
 	@echo ""
 	@echo "$ make clean                # wipe ./dist/"
@@ -284,10 +289,9 @@ LIBBPF_LDLAGS =
 LIBBPF_SRC = ./3rdparty/libbpf/src
 
 $(OUTPUT_DIR)/libbpf/libbpf.a: \
-	.checkver_$(CMD_CLANG) \
 	$(LIBBPF_SRC) \
 	$(wildcard $(LIBBPF_SRC)/*.[ch]) \
-	| $(OUTPUT_DIR)
+	| .checkver_$(CMD_CLANG) $(OUTPUT_DIR)
 #
 	CC="$(CMD_CLANG)" \
 		CFLAGS="$(LIBBPF_CFLAGS)" \
@@ -371,6 +375,26 @@ $(OUTPUT_DIR)/tracee.bpf.$(BPF_NOCORE_TAG).o: \
 clean-bpf-nocore:
 #
 	$(CMD_RM) -rf $(OUTPUT_DIR)/tracee.bpf.$(BPF_NOCORE_TAG).o
+
+TMP_DIR = /tmp/tracee
+
+.PHONY: install-bpf-nocore
+.ONESHELL:
+install-bpf-nocore: \
+	$(OUTPUT_DIR)/tracee.bpf.$(BPF_NOCORE_TAG).o \
+	| .check_$(CMD_INSTALL) \
+	.check_$(CMD_RM) \
+	.check_$(CMD_MKDIR) \
+#
+	@$(CMD_MKDIR) -p $(TMP_DIR)
+	$(CMD_RM) -f $(TMP_DIR)/tracee.bpf.$(BPF_NOCORE_TAG).o
+	$(CMD_INSTALL) -m 0640 $(OUTPUT_DIR)/tracee.bpf.$(BPF_NOCORE_TAG).o $(TMP_DIR)
+
+.PHONY: uninstall-bpf-nocore
+uninstall-bpf-nocore: \
+	| .check_$(CMD_RM)
+#
+	$(CMD_RM) -f $(TMP_DIR)/tracee.bpf.$(BPF_NOCORE_TAG).o
 
 #
 # co-re ebpf
