--- a/builder/Dockerfile.ubuntu-tracee-make
+++ b/builder/Dockerfile.ubuntu-tracee-make
@@ -3,9 +3,12 @@ FROM ubuntu:hirsute
 ARG uid=1000
 ARG gid=1000
 
+# install needed environment
+
 RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get update && \
-    apt-get install -y sudo coreutils bash git curl && \
+    apt-get install -y sudo coreutils findutils && \
+    apt-get install -y bash git curl rsync && \
     apt-get install -y llvm clang golang make gcc && \
     apt-get install -y linux-headers-generic && \
     apt-get install -y libelf-dev && \
@@ -13,13 +16,21 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
     curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.33.1/opa_linux_amd64_static && \
     chmod 755 /usr/bin/opa
 
+# allow TRACEE* and LIBBPFGO* environment variables through sudo
+
+RUN echo "Defaults env_keep += \"LANG LC_* HOME EDITOR PAGER GIT_PAGER MAN_PAGER\"" > /etc/sudoers && \
+    echo "Defaults env_keep += \"LIBBPFGO* TRACEE*\"" >> /etc/sudoers && \
+    echo "root ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers && \
+    echo "tracee ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers && \
+    chmod 0440 /etc/sudoers
+
+# prepare tracee user to be $UID:$GID host equivalent
+
 RUN export uid=$uid gid=$gid && \
     mkdir -p /home/tracee && \
     echo "tracee:x:${uid}:${gid}:Tracee,,,:/home/tracee:/bin/bash" >> /etc/passwd && \
     echo "tracee:x:${gid}:" >> /etc/group && \
     echo "tracee::99999:0:99999:7:::" >> /etc/shadow && \
-    echo "tracee ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/tracee && \
-    chmod 0440 /etc/sudoers.d/tracee && \
     chown ${uid}:${gid} -R /home/tracee && \
     echo "export PS1=\"\u@\h[\w]$ \"" > /home/tracee/.bashrc && \
     echo "alias ls=\"ls --color\"" >> /home/tracee/.bashrc && \
