builder: Dockerfile for tracee-{core,nocore}
Dockerfile to build tracee-core & tracee-nocore containers.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,7 @@
 ./dist/*
 ./tracee-ebpf/dist/*
 ./tracee-rules/dist/*
+./3rdparty/btfhub
+./3rdparty/btfhub/*
+./3rdparty/btfhub-archive
+./3rdparty/btfhub-archive/*
