--- a/builder/Dockerfile.alpine-tracee-make
+++ b/builder/Dockerfile.alpine-tracee-make
@@ -1,3 +1,11 @@
+################################################################################
+# INSTRUCTIONS
+################################################################################
+#
+# This Dockerfile is meant to create a building/exec environment for tracee.
+#
+################################################################################
+
 FROM alpine:3.15
 
 ARG uid=1000
