--- a/builder/Makefile.tracee-make
+++ b/builder/Makefile.tracee-make
@@ -33,30 +33,30 @@ help:
 	@echo ""
 	@echo "To create an alpine-tracee-make container:"
 	@echo ""
-	@echo "    $ make -f builder/Makefile.tracee-make alpine-prepare"
+	@echo "    $$ make -f builder/Makefile.tracee-make alpine-prepare"
 	@echo ""
 	@echo "To create an ubuntu-tracee-make container:"
 	@echo ""
-	@echo "    $ make -f builder/Makefile.tracee-make ubuntu-prepare"
+	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-prepare"
 	@echo ""
 	@echo "To execute an alpine-tracee-make shell:"
 	@echo ""
-	@echo "    $ make -f builder/Makefile.tracee-make alpine-shell"
+	@echo "    $$ make -f builder/Makefile.tracee-make alpine-shell"
 	@echo ""
 	@echo "To execute an ubuntu-tracee-make shell:"
 	@echo ""
-	@echo "    $ make -f builder/Makefile.tracee-make ubuntu-shell"
+	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-shell"
 	@echo ""
 	@echo "Examples:"
 	@echo ""
-	@echo "    $ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"clean\""
-	@echo "    $ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"bpf-core\""
-	@echo "    $ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"tracee-ebpf\""
+	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"clean\""
+	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"bpf-core\""
+	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"tracee-ebpf\""
 	@echo ""
 	@echo "Tell tracee-make to do STATIC builds:"
 	@echo ""
-	@echo "    $ STATIC=0 make -f builder/Makefile.tracee-make alpine-make ARG=\"tracee-ebpf\""
-	@echo "    $ STATIC=1 make -f builder/Makefile.tracee-make alpine-make ARG=\"tracee-ebpf\""
+	@echo "    $$ STATIC=0 make -f builder/Makefile.tracee-make alpine-make ARG=\"tracee-ebpf\""
+	@echo "    $$ STATIC=1 make -f builder/Makefile.tracee-make alpine-make ARG=\"tracee-ebpf\""
 	@echo ""
 
 #
