feat: Introduce bash scripts for running signatures.
Signed-off-by: Simar <simar@linux.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,7 +5,7 @@ build-runner:
 	go build -o runner runner.go
 
 build-trainer-docker:
-	docker build -t tracee-trainer .
+	docker build -t tracee-trainer:latest .
 
 build-tracee-docker:
 	cd .. && make docker
