--- a/Makefile.one
+++ b/Makefile.one
@@ -395,7 +395,7 @@ $(OUTPUT_DIR)/tracee.bpf.core.o: \
 		-I$(OUTPUT_DIR)/tracee.bpf \
 		-target bpf \
 		-O2 -g \
-		-target bpf -march=bpf -mcpu=$(BPF_VCPU) \
+		-march=bpf -mcpu=$(BPF_VCPU) \
 		-c $(TRACEE_EBPF_OBJ_SRC) \
 		-o $@
 
