builder/Dockerfile.ubuntu-tracee-make: upgrade to impish
This upgrade is needed since we've bumped minimum golang version from
1.16 to 1.17. I'm using the default versions that either come with
alpine or ubuntu, so we just need upgrade the "tracee-make" environment.

--- a/builder/Dockerfile.ubuntu-tracee-make
+++ b/builder/Dockerfile.ubuntu-tracee-make
@@ -6,7 +6,7 @@
 #
 ################################################################################
 
-FROM ubuntu:hirsute
+FROM ubuntu:impish
 
 ARG uid=1000
 ARG gid=1000
