--- a/builder/Makefile.tracee
+++ b/builder/Makefile.tracee
@@ -40,6 +40,7 @@ help:
 	@echo "To execute tracee container(s):"
 	@echo ""
 	@echo "    $$ make -f builder/Makefile.tracee run-alpine-tracee-core"
+	@echo "    $$ make -f builder/Makefile.tracee run-alpine-tracee-core-btfhub"
 	@echo "    $$ make -f builder/Makefile.tracee run-alpine-tracee-nocore"
 	@echo ""
 	@echo "To execute tracee-ebpf container(s):"
@@ -92,6 +93,9 @@ build-alpine-tracee-core: \
 		--build-arg=FLAVOR=tracee-core \
 		.
 
+ALPINE_TRACEE_CORE_BTFHUB_CONTNAME = tracee-btfhub
+ALPINE_TRACEE_CORE_DOCKERFILE = builder/Dockerfile.alpine-tracee
+
 .PHONY: build-alpine-tracee-core-btfhub
 build-alpine-tracee-core-btfhub: \
 	| .check_$(CMD_DOCKER) \
@@ -99,7 +103,7 @@ build-alpine-tracee-core-btfhub: \
 #
 	$(CMD_DOCKER) build \
 		-f $(ALPINE_TRACEE_CORE_DOCKERFILE) \
-		-t $(ALPINE_TRACEE_CORE_CONTNAME):latest \
+		-t $(ALPINE_TRACEE_CORE_BTFHUB_CONTNAME):latest \
 		--build-arg=BTFHUB=1 \
 		--build-arg=FLAVOR=tracee-core \
 		.
@@ -135,6 +139,18 @@ run-alpine-tracee-core: \
 		--rm -it $(ALPINE_TRACEE_CORE_CONTNAME) \
 		$(ARG)
 
+.PHONY: run-alpine-tracee-core-btfhub
+run-alpine-tracee-core-btfhub: \
+	| .check_$(CMD_DOCKER) \
+	.check_tree
+#
+	$(CMD_DOCKER) run --privileged --pid=host \
+		-v /etc/os-release:/etc/os-release-host:ro \
+		-e LIBBPFGO_OSRELEASE_FILE=/etc/os-release-host \
+		-e TRACEE_EBPF_ONLY=0 \
+		--rm -it $(ALPINE_TRACEE_CORE_BTFHUB_CONTNAME) \
+		$(ARG)
+
 .PHONY: run-alpine-tracee-nocore
 run-alpine-tracee-nocore: \
 	| .check_$(CMD_DOCKER) \
@@ -164,6 +180,18 @@ run-alpine-tracee-ebpf-core: \
 		-e LIBBPFGO_OSRELEASE_FILE=/etc/os-release-host \
 		-e TRACEE_EBPF_ONLY=1 \
 		--rm -it $(ALPINE_TRACEE_CORE_CONTNAME) \
+		$(ARG)
+
+.PHONY: run-alpine-tracee-ebpf-core-btfhub
+run-alpine-tracee-ebpf-core-btfhub: \
+	| .check_$(CMD_DOCKER) \
+	.check_tree
+#
+	$(CMD_DOCKER) run --privileged --pid=host \
+		-v /etc/os-release:/etc/os-release-host:ro \
+		-e LIBBPFGO_OSRELEASE_FILE=/etc/os-release-host \
+		-e TRACEE_EBPF_ONLY=1 \
+		--rm -it $(ALPINE_TRACEE_CORE_BTFHUB_CONTNAME) \
 		$(ARG)
 
 .PHONY: run-alpine-tracee-ebpf-nocore
