builder: adjust names for Makefiles and Dockerfiles
Files responsible for building tracee container images:

- builder/Makefile.tracee-container
- builder/Dockerfile.alpine-tracee-container
- builder/entrypoint.sh

Files responsible for local building environment:

- Makefile.tracee-make
- Dockerfile.alpine-tracee-make
- Dockerfile.ubuntu-tracee-make

--- a/Makefile.one
+++ b/Makefile.one
@@ -202,42 +202,44 @@ env:
 .PHONY: help
 help:
 	@echo ""
-	@echo "$ make env                  # show makefile environment/variables"
+	@echo "# environment"
+	@echo ""
+	@echo "    $$ make -f Makefile.one env                  # show makefile environment/variables"
 	@echo ""
 	@echo "# build"
 	@echo ""
-	@echo "$ make all                  # build tracee-ebpf, tracee-rules & rules"
-	@echo "$ make bpf-core             # build ./dist/tracee.bpf.core.o"
-	@echo "$ make bpf-nocore           # build ./dist/tracee.bpf.XXX.o"
-	@echo "$ make tracee-ebpf          # build ./dist/tracee-ebpf"
-	@echo "$ make tracee-rules         # build ./dist/tracee-rules"
-	@echo "$ make rules                # build ./dist/rules"
+	@echo "    $$ make -f Makefile.one all                  # build tracee-ebpf, tracee-rules & rules"
+	@echo "    $$ make -f Makefile.one bpf-core             # build ./dist/tracee.bpf.core.o"
+	@echo "    $$ make -f Makefile.one bpf-nocore           # build ./dist/tracee.bpf.XXX.o"
+	@echo "    $$ make -f Makefile.one tracee-ebpf          # build ./dist/tracee-ebpf"
+	@echo "    $$ make -f Makefile.one tracee-rules         # build ./dist/tracee-rules"
+	@echo "    $$ make -f Makefile.one rules                # build ./dist/rules"
 	@echo ""
 	@echo "# install"
 	@echo ""
-	@echo "$ make install-bpf-nocore   # install BPF no CO-RE obj into /tmp/tracee"
-	@echo "$ make uninstall-bpf-nocore # uninstall BPF no CO-RE obj from /tmp/tracee"
+	@echo "    $$ make -f Makefile.one install-bpf-nocore   # install BPF no CO-RE obj into /tmp/tracee"
+	@echo "    $$ make -f Makefile.one uninstall-bpf-nocore # uninstall BPF no CO-RE obj from /tmp/tracee"
 	@echo ""
 	@echo "# clean"
 	@echo ""
-	@echo "$ make clean                # wipe ./dist/"
-	@echo "$ make clean-bpf-core       # wipe ./dist/tracee.bpf.core.o"
-	@echo "$ make clean-bpf-nocore     # wipe ./dist/tracee.bpf.XXX.o"
-	@echo "$ make clean-tracee-ebpf    # wipe ./dist/tracee-ebpf"
-	@echo "$ make clean-tracee-rules   # wipe ./dist/tracee-rules"
-	@echo "$ make clean-rules          # wipe ./dist/rules"
+	@echo "    $$ make -f Makefile.one clean                # wipe ./dist/"
+	@echo "    $$ make -f Makefile.one clean-bpf-core       # wipe ./dist/tracee.bpf.core.o"
+	@echo "    $$ make -f Makefile.one clean-bpf-nocore     # wipe ./dist/tracee.bpf.XXX.o"
+	@echo "    $$ make -f Makefile.one clean-tracee-ebpf    # wipe ./dist/tracee-ebpf"
+	@echo "    $$ make -f Makefile.one clean-tracee-rules   # wipe ./dist/tracee-rules"
+	@echo "    $$ make -f Makefile.one clean-rules          # wipe ./dist/rules"
 	@echo ""
 	@echo "# test"
 	@echo ""
-	@echo "$ make test                 # run all go & opa tests"
-	@echo "$ make test-tracee-ebpf     # go test tracee-ebpf"
-	@echo "$ make test-tracee-rules    # go test tracee-rules"
-	@echo "$ make test-rules           # opa test (tracee-rules)"
+	@echo "    $$ make -f Makefile.one test                 # run all go & opa tests"
+	@echo "    $$ make -f Makefile.one test-tracee-ebpf     # go test tracee-ebpf"
+	@echo "    $$ make -f Makefile.one test-tracee-rules    # go test tracee-rules"
+	@echo "    $$ make -f Makefile.one test-rules           # opa test (tracee-rules)"
 	@echo ""
 	@echo "# flags"
 	@echo ""
-	@echo "STATIC=1 make ...           # build static binaries"
-	@echo "BTFHUB=1 STATIC=1 make ...  # build static binaries, embed BTF"
+	@echo "    $$ STATIC=1 make ...                         # build static binaries"
+	@echo "    $$ BTFHUB=1 STATIC=1 make ...                # build static binaries, embed BTF"
 	@echo ""
 
 #
