- Creates a new `Makefile.release` which has two targets:     - Snapshot         - Builds tracee-ebpf, tracee-rules, rules         - Builds an archive of build artifacts along with license         - Takes checksum of archive         - Builds container images     - Publish         - Pushes container images to dockerhub         - Creates github release with the build artifact archive
For both of these targets the main environment variables to set are:

PUSH_DOCKER_REPO (default: aquasec/tracee)

SNAPSHOT_VERSION - the tag or SHA to label the release/snapshot as (default: latest git SHA)

This commit also does the following:

- Updates the github action for releasing to use this new makefile
- Fixes existing Makefile to cleanup intermediate images

Signed-off-by: grantseltzer <grantseltzer@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,8 @@
 name: release
-on: 
-  workflow_dispatch:
-    inputs:
-      tag:
-        required: true
+on:
+  push:
+    tags:
+      - "v*"
 jobs:
   release:
     runs-on: ubuntu-20.04
@@ -17,4 +16,5 @@ jobs:
           gh auth login --with-token <<<'${{ secrets.GITHUB_TOKEN }}'
           docker login docker.io --username ${{ secrets.DOCKERHUB_USER }} --password-stdin <<<'${{ secrets.DOCKERHUB_TOKEN }}'
       - name: release
-        run: make release DOCKER=1 RELEASE_TAG=${{ github.event.inputs.tag }}
+        run: |
+          make -f builder/Makefile.release SNAPSHOT_VERSION=$(git describe --tags --abbrev=0) PUSH_DOCKER_REPO=aquasec/tracee snapshot publish
