--- a/builder/Makefile.tracee-make
+++ b/builder/Makefile.tracee-make
@@ -9,6 +9,9 @@ all:
 # make
 #
 
+.ONESHELL:
+SHELL = /bin/sh
+
 MAKEFLAGS += --no-print-directory
 
 #
@@ -17,7 +20,6 @@ MAKEFLAGS += --no-print-directory
 
 CMD_DOCKER ?= docker
 
-.ONESHELL:
 .check_%:
 #
 	@command -v $* >/dev/null
@@ -68,7 +70,6 @@ help:
 #
 
 .PHONY: .check_tree
-.ONESHELL:
 .check_tree:
 #
 	@if [ ! -d ./builder ]; then
@@ -92,7 +93,8 @@ alpine-prepare: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
-	$(CMD_DOCKER) build \
+	$(CMD_DOCKER) \
+		build \
 		-f $(ALPINE_MAKE_DOCKERFILE) \
 		-t $(ALPINE_MAKE_CONTNAME):latest \
 		--build-arg uid=$(UID) \
@@ -107,7 +109,8 @@ ubuntu-prepare: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
-	$(CMD_DOCKER) build \
+	$(CMD_DOCKER) \
+		build \
 		-f $(UBUNTU_MAKE_DOCKERFILE) \
 		-t $(UBUNTU_MAKE_CONTNAME):latest \
 		--build-arg uid=$(UID) \
@@ -142,7 +145,8 @@ alpine-shell: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
-	$(CMD_DOCKER) $(DOCKER_RUN_ARGS) \
+	$(CMD_DOCKER) \
+		$(DOCKER_RUN_ARGS) \
 		-it $(ALPINE_MAKE_CONTNAME) \
 		/bin/bash
 
@@ -151,7 +155,8 @@ ubuntu-shell: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
-	$(CMD_DOCKER) $(DOCKER_RUN_ARGS) \
+	$(CMD_DOCKER) \
+		$(DOCKER_RUN_ARGS) \
 		-it $(UBUNTU_MAKE_CONTNAME) \
 		/bin/bash
 
@@ -165,7 +170,8 @@ alpine-make: \
 	.check_tree
 #
 ifneq ($(ARG),)
-	$(CMD_DOCKER) $(DOCKER_RUN_ARGS) \
+	$(CMD_DOCKER) \
+		$(DOCKER_RUN_ARGS) \
 		-it $(ALPINE_MAKE_CONTNAME) \
 		$(MAKE) -f Makefile.one $(ARG)
 endif
@@ -176,7 +182,8 @@ ubuntu-make: \
 	.check_tree
 #
 ifneq ($(ARG),)
-	$(CMD_DOCKER) $(DOCKER_RUN_ARGS) \
+	$(CMD_DOCKER) \
+		$(DOCKER_RUN_ARGS) \
 		-it $(UBUNTU_MAKE_CONTNAME) \
 		$(MAKE) -f Makefile.one $(ARG)
 endif
