chore: run tests in the pkg subdirectories
We already have code under pkg that requires CGO flags
to compile and run. Therefore, we run them in the
test-tracee-ebpf target.

Resolves: #1369

Signed-off-by: Daniel Pacak <pacak.daniel@gmail.com>

--- a/Makefile.one
+++ b/Makefile.one
@@ -496,7 +496,8 @@ test-tracee-ebpf: \
 		-tags $(GO_TAGS_EBPF) \
 		-v \
 		./tracee-ebpf/... \
-		./cmd/tracee-ebpf/...
+		./cmd/tracee-ebpf/... \
+		./pkg/...
 
 #
 # btfhub (expensive: only run if core obj changed)
