fix: Add updates as per comments.
Signed-off-by: Simar <simar@linux.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,7 +8,7 @@ build-trainer-docker:
 	docker build -t tracee-trainer:latest .
 
 build-tracee-docker:
-	cd .. && make docker
+	cd .. && make -f builder/Makefile.tracee-container build-alpine-tracee-core
 
 run-tests: clean build-runner build-trainer-docker build-tracee-docker
 	go test -v -run=TestTraceeSignatures
