feat: Add core, nocore and core-btfhub subtests.
Signed-off-by: Simar <simar@linux.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,8 +7,14 @@ build-runner:
 build-trainer-docker:
 	docker build -t tracee-trainer:latest .
 
-build-tracee-docker:
+build-tracee-docker-core:
 	cd .. && make -f builder/Makefile.tracee-container build-alpine-tracee-core
 
-run-tests: clean build-runner build-trainer-docker build-tracee-docker
+build-tracee-docker-nocore:
+	cd .. && make -f builder/Makefile.tracee-container build-alpine-tracee-nocore
+
+build-tracee-docker-core-btfhub:
+	cd .. && make -f builder/Makefile.tracee-container build-alpine-tracee-core-btfhub
+
+run-tests: clean build-runner build-trainer-docker build-tracee-docker-core build-tracee-docker-nocore build-tracee-docker-core-btfhub
 	go test -v -run=TestTraceeSignatures
