--- a/builder/Makefile.tracee-make
+++ b/builder/Makefile.tracee-make
@@ -133,6 +133,7 @@ DOCKER_RUN_ARGS = run --rm --pid=host --privileged \
 		-v $(PWD):/tracee \
 		-v /lib/modules:/lib/modules:ro \
 		-v /usr/src:/usr/src:ro \
+		-v /sys/kernel/security:/sys/kernel/security:ro \
 		-e LIBBPFGO_OSRELEASE_FILE=/etc/os-release-host \
 		$(DOCKER_RUN_ENV)
 
