feat: Simplify docker layers, change runner.go -> runner.sh
Signed-off-by: Simar <simar@linux.com>

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,23 +1,11 @@
 FROM debian:buster
 
-ADD ./runner /
+# install required dependencies
 ADD ./tracee-trainer/* /
-RUN chmod +x /runner
+ADD install-deps.sh /
+RUN ./install-deps.sh
 
-RUN apt-get update
+ADD ./runner.sh /
+RUN chmod +x /runner.sh
 
-# TRC-3 Code injection
-RUN chmod +x ./injector
-RUN apt-get install -y ncat gcc
-
-# TRC-4 Dynamic code loading
-RUN apt-get install -y upx
-
-# k8s service account tokens
-RUN mkdir -p /var/run/secrets/kubernetes.io/serviceaccount
-RUN mkdir -p /etc/kubernetes/pki
-RUN echo "test" > /var/run/secrets/kubernetes.io/serviceaccount/token
-RUN echo "test" > /etc/kubernetes/pki/token
-RUN echo "test" > /authorized_keys
-
-ENTRYPOINT ["/runner"]
+ENTRYPOINT ["/runner.sh"]
