--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,9 +1,3 @@
-clean:
-	rm -f runner
-
-build-runner:
-	go build -o runner runner.go
-
 build-trainer-docker:
 	docker build -t tracee-trainer:latest .
 
@@ -16,5 +10,5 @@ build-tracee-docker-nocore:
 build-tracee-docker-core-btfhub:
 	cd .. && make -f builder/Makefile.tracee-container build-alpine-tracee-core-btfhub
 
-run-tests: clean build-runner build-trainer-docker build-tracee-docker-core build-tracee-docker-nocore build-tracee-docker-core-btfhub
+run-tests: build-trainer-docker build-tracee-docker-core build-tracee-docker-nocore build-tracee-docker-core-btfhub
 	go test -v -run=TestTraceeSignatures
