Packaging: Introduce a way to build Linux distro pkgs
- builder/Makefile.packaging is responsible for building Linux distros
  packages. Targets should be in form of "distro-bin-codename" and
  should use docker images to build packages and place them in dist/
  dir.

- packaging/ directory contains all files needed to build the packages,
  including the Dockerfiles that are responsible for building the
  environments that will be used to generate those packages.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ coverage.txt
 
 # needed for the makefile btfhub building logic
 *.md5
+
+# ignore local and temporary packaging files
+debian
+.ubuntu*
